# smart-management-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  notas.md  pyproject.toml  requirements.txt  tablas2.md
Notas/: StockRegistro_Tablas_Campos.md
alembic/: env.py
alembic/versions/: 0001_initial_professional_structure.py  0002_ajustes_y_adaptación_002.py  0003_ajustes_y_adaptación_003.py  0004_ajustes_y_adaptación_004.py  0005_ajustes_y_adaptación_005.py  0006_configuración_restaurante_y_roles.py  0007_ajustes_conexion_frontend.py  0008_sync_with_original_projec.py  0009_sincronizacion_completa_modelo_producto.py  0010_add_missing_tables_and_fields.py  0011_add_eventos_table.py  0012_add_proveedores_table.py
migrations/: create_eventos_tables.sql
src/: config.py  database.py  dependencies.py  main.py  models.py  routers.py  utils.py
src/ai_management/: audio_client.py  client.py  config.py  models.py  router.py  schemas.py  services.py
src/analytics/: models.py  router.py  schemas.py
src/analytics/routers/: __init__.py  analytics_router.py
src/analytics/services/: projection_service.py  report_service.py  stats_service.py
src/authentication/: dependencies.py  google_oauth_router.py  models.py  router.py  schemas.py  services.py  user_details_router.py  utils.py
src/email/: email_service.py
src/inventory/: models.py  router.py  schemas.py
src/inventory/routers/: __init__.py  catalog_router.py  history_router.py  merma_router.py  stock_router.py
src/inventory/services/: catalog_service.py  history_service.py  inventory_engine_service.py  merma_service.py  stock_service.py
src/operations/: models.py  router.py  schemas.py
src/operations/routers/: __init__.py  conteo_router.py  event_router.py  recipe_router.py
src/operations/services/: event_service.py  recipe_service.py
src/purchases/: ai_service.py  models.py  router.py  schemas.py
src/registration/: router.py  schemas.py  services.py
src/sales/: models.py  router.py  schemas.py
src/sales/routers/: event_router.py  sales_router.py
src/sales/services/: event_service.py  recipe_service.py  sales_service.py
src/settings/: __init__.py  router.py  schemas.py
src/storage/: router.py
src/templates/emails/: email_confirmation.html  password_reset.html
